--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,13 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-seo</artifactId>
-            <version>[0.0.1,5.0.0-SNAPSHOT)</version>
+            <version>[0.0.1,)</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-wiki</artifactId>
-            <version>[0.0.1,5.0.0-SNAPSHOT)</version>
+            <version>[0.0.1,)</version>
             <type>lutece-plugin</type>
         </dependency>
     </dependencies>
