--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,19 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/seo/module-seo-wiki</connection>
-        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/seo/module-seo-wiki</developerConnection>
-        <url>http://dev.lutece.paris.fr/viewvc/lutece/portal/trunk/plugins/seo/module-seo-wiki</url>
+        <connection>scm:git:https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</connection>
+        <developerConnection>scm:git:https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</developerConnection>
+        <url>https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</url>
     </scm>
+    
+    
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.0</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
