--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-seo-wiki</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>Lutece seo wiki module</name>
 
     <repositories>
@@ -60,7 +60,8 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</url>
-    </scm>
+      <tag>module-seo-wiki-1.0.1</tag>
+  </scm>
     
     
     <build>
