--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-seo-wiki</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <name>Lutece seo wiki module</name>
 
     <repositories>
@@ -59,7 +59,7 @@
         <connection>scm:git:https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</developerConnection>
         <url>https://github.com/lutece-platform/lutece-seo-module-seo-wiki.git</url>
-      <tag>lutece-seo-module-seo-wiki-1.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
         
 </project>
